--- a/src/components/includes/AddLinkBox/css/style.css
+++ b/src/components/includes/AddLinkBox/css/style.css
@@ -23,7 +23,7 @@
 }
 .add-link-box .inputs-and-media .text-icon {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 .add-link-box .inputs-and-media .text-icon input {
   border: none;
