--- a/src/index.css
+++ b/src/index.css
@@ -47,40 +47,6 @@ code {
 .h-25-900 {
   height: 34px;
 }
-@media screen and (max-width: 900px) {
-  .primary-btn-inverse {
-    font-size: 13px;
-  }
-  .custom-btn-sm {
-    width: 100%;
-  }
-  .form-box {
-    /* width: 100%; */
-    /* border-radius: unset; */
-    padding: 72px 24px;
-    box-sizing: border-box;
-    margin-top: unset;
-    margin-bottom: unset;
-  }
-  .mb-32-900 {
-    margin-bottom: 32px !important;
-  }
-  .mb-16-900 {
-    margin-bottom: 16px !important;
-  }
-  .fsz-14-900 {
-    font-size: 14px;
-  }
-  .hide-900 {
-    display: none;
-  }
-  .h-25-900 {
-    height: 25px;
-  }
-  .link-btn {
-    height: 48px !important;
-  }
-}
 
 .header-p {
   /* Mobile / Display Small */
@@ -305,28 +271,6 @@ code {
   transform: scale(1.1);
 }
 
-.custom-link-btn:active {
-  transform: scale(1.002);
-}
-.custom-link-btn {
-  width: 100%;
-  height: 45px;
-  /* Monaly primary */
-
-  box-sizing: border-box;
-  border: none;
-  border-radius: 8px;
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 34px;
-  /* identical to box height, or 283% */
-
-  letter-spacing: 0.75px;
-
-  outline: none;
-}
 .link-btn:active {
   transform: scale(1.002);
 }
@@ -455,26 +399,21 @@ input::-ms-clear {
   position: relative;
 }
 .popup-edit-profile {
-  position: absolute;
   width: 365.21px;
   height: auto;
   background: #ffffff;
   box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
   left: calc(100% + 10px);
-  /* top: calc(100% + 10px); */
   z-index: 2;
   padding: 12px;
 }
 .popup {
-  position: absolute;
-  min-width: 400px;
+  width: 400px;
   height: auto;
   background: #ffffff;
   box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
-  right: 0px;
-  top: calc(100% + 10px);
   z-index: 2;
   padding: 12px;
 }
@@ -622,4 +561,69 @@ a {
 }
 .no-underline:hover {
   text-decoration: none;
+}
+.popover .arrow::after,
+.popover .arrow::before {
+  position: absolute;
+  display: none;
+  content: "";
+  border-color: transparent;
+  border-style: solid;
+}
+@media screen and (max-width: 900px) {
+  .primary-btn-inverse {
+    font-size: 13px;
+  }
+  .custom-btn-sm {
+    width: 100% !important;
+  }
+  .form-box {
+    padding: 72px 24px;
+    box-sizing: border-box;
+    margin-top: unset;
+    margin-bottom: unset;
+  }
+  .mb-32-900 {
+    margin-bottom: 32px !important;
+  }
+  .mb-16-900 {
+    margin-bottom: 16px !important;
+  }
+  .fsz-14-900 {
+    font-size: 14px;
+  }
+  .hide-900 {
+    display: none;
+  }
+  .h-25-900 {
+    height: 25px;
+  }
+  .link-btn {
+    height: 48px !important;
+  }
+  .popup {
+    width: 300px;
+    height: auto;
+    padding: 4px;
+  }
+  .popup button {
+    padding: 8px 12px;
+    font-size: 13px;
+    line-height: 22px;
+  }
+  .popup button:hover {
+    background: #fff9fa;
+    border-radius: 40px;
+  }
+  .modal-dialog.qrmodal {
+    width: 300px;
+    height: 400px;
+    padding: 10px;
+    margin: 0.5rem auto;
+  }
+  .modal-dialog.qrmodal .modal-content {
+    height: 100%;
+    background-color: transparent;
+    border: none;
+  }
 }
