--- a/src/components/screens/ResetPassword/css/style.css
+++ b/src/components/screens/ResetPassword/css/style.css
@@ -10,3 +10,8 @@
   /* justify-content: center; */
   align-items: center;
 }
+@media screen and (max-width: 900px) {
+  #signinpage {
+    background: #ffffff;
+  }
+}
