--- a/src/components/screens/VisitorsScreen/css/style.css
+++ b/src/components/screens/VisitorsScreen/css/style.css
@@ -1,7 +1,8 @@
 /* The device with borders */
 #visitorsScreen {
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  max-height: 100vh;
   /* position: relative; */
   display: flex;
   flex-direction: column;
@@ -101,6 +102,53 @@
 }
 #visitorsScreen .visitors-link-btn {
   width: 100%;
+  min-height: 64px;
+  /* Monaly primary */
+
+  box-sizing: border-box;
+  border: none;
+  border-radius: 16px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  /* identical to box height, or 283% */
+
+  letter-spacing: 0.75px;
+
+  outline: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  color: #262626;
+  background-color: #b9e3c6;
+  /* padding-left: 60px; */
+}
+#visitorsScreen .visitors-link-btn .link-image {
+  width: 60px;
+  height: 80%;
+  background-color: transparent;
+  position: absolute;
+  left: 0px;
+  transform: translate(10%, -50%);
+  top: 50%;
+  border-radius: 16px;
+  overflow: hidden;
+}
+#visitorsScreen .visitors-link-btn .text {
+  width: 70%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#visitorsScreen .visitors-link-btn-with-img:active {
+  transform: scale(1.002);
+}
+#visitorsScreen .visitors-link-btn-with-img {
+  width: 100%;
   height: 64px;
   /* Monaly primary */
 
@@ -117,16 +165,30 @@
   letter-spacing: 0.75px;
 
   outline: none;
+  display: flex;
+  justify-content: start;
+  align-items: flex-end;
 }
 @media screen and (max-width: 900px) {
   #visitorsScreen .content {
     width: 100%;
     height: 100vh;
     text-align: center;
-    padding: 32px 8px;
+    padding: 32px 12px;
     box-sizing: border-box;
   }
   #visitorsScreen .visitors-link-btn {
+    width: 100%;
+    height: 45px;
+    border-radius: 4px;
+  }
+  #visitorsScreen .visitors-link-btn .link-image {
+    width: 40px;
+    /* height: 39px; */
+
+    border-radius: 4px;
+  }
+  #visitorsScreen .visitors-link-btn-with-img {
     width: 100%;
     height: 45px;
     border-radius: 8px;
