--- a/src/components/includes/SmartPhone/css/style.css
+++ b/src/components/includes/SmartPhone/css/style.css
@@ -11,6 +11,7 @@
   overflow: hidden;
   background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 /* The horizontal line on the top of the device */
@@ -50,7 +51,6 @@
   padding: 20px;
   text-align: center;
   position: relative;
-  
 }
 .smartphone .red {
   background-color: transparent;
@@ -191,4 +191,15 @@
   align-items: flex-end;
   position: relative;
   padding: 8px;
+}
+.add-links-to-start {
+  box-shadow: 0px 8px 16px rgba(17, 17, 17, 0.04);
+  width: 100%;
+  height: 100px;
+  background-color: rgba(255, 255, 255, 0.096);
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-radius: 8px;
+  margin-top: 50px;
 }
