--- a/src/components/screens/DashBoard/css/style.css
+++ b/src/components/screens/DashBoard/css/style.css
@@ -1246,3 +1246,120 @@
   border-color: transparent;
   border-style: solid;
 }
+.analytics-metrics {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 32px 0;
+  flex-wrap: wrap;
+}
+.analytics-metrics-item {
+  height: 140px;
+  flex: 0 0 200px;
+  border-radius: 16px;
+  background: #ffffff;
+  /* margin: 0 10px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+@media screen and (max-width: 900px) {
+  .analytics-metrics {
+    margin: 16px 0;
+    justify-content: flex-start;
+  }
+  .analytics-metrics-item {
+    height: 80px;
+    flex: 0 0 100px;
+    margin: 8px;
+  }
+  .analytics-metrics-item p {
+    font-size: 10px;
+    margin: 0 !important;
+    line-height: 16px;
+  }
+}
+.popup-notifications {
+  width: 365.21px;
+  max-height: 400px;
+  background: #ffffff;
+  box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+  left: calc(100% + 10px);
+  z-index: 2;
+  overflow-y: scroll;
+  padding: 10px;
+}
+.popup-notifications::-webkit-scrollbar {
+  display: none;
+}
+.popup-notifications-item {
+  width: 100%;
+  height: 200px;
+  background-color: #fff;
+  margin-bottom: 10px;
+  border-radius: 6px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  padding: 8px;
+  position: relative;
+}
+
+.popup-notifications-item header {
+  height: 50px;
+  width: 100%;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  /* or 200% */
+
+  letter-spacing: 3px;
+  text-transform: uppercase;
+
+  /* Grayscale / Label */
+
+  color: #6e7191;
+}
+.popup-notifications-item body {
+  height: 120px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+.popup-notifications-item body .image {
+  height: 100%;
+  flex: 0 0 100px;
+  background-color: #ddd;
+  margin-right: 8px;
+  overflow: hidden;
+  border-radius: 8px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: auto;
+}
+.popup-notifications-item body .text {
+  /* Mobile / Text Medium */
+
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 22px;
+  /* or 171% */
+
+  letter-spacing: 0.75px;
+
+  /* Grayscale / Body */
+
+  color: #4e4b66;
+}
+.click-notification {
+  position: absolute;
+  bottom: 16px;
+  right: 16px;
+  z-index: 2;
+  font-size: 20px;
+}
