--- a/src/index.css
+++ b/src/index.css
@@ -414,7 +414,7 @@ input::-ms-clear {
   background: #ffffff;
   box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
-  z-index: 2;
+  z-index: 22;
   padding: 12px;
 }
 .popup-edit-profile div {
@@ -469,6 +469,7 @@ input::-ms-clear {
   color: #000000;
   background-color: transparent;
   border: none;
+  width: 100%;
 }
 .popup button:hover {
   /* monaly hover */
