--- a/src/components/includes/Pricing/css/style.css
+++ b/src/components/includes/Pricing/css/style.css
@@ -16,6 +16,7 @@ section.pricing {
   border-radius: 1rem;
   transition: all 0.2s;
   box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+  margin-bottom: 1rem;
 }
 
 .pricing hr {
