--- a/src/components/screens/DashBoard/css/style.css
+++ b/src/components/screens/DashBoard/css/style.css
@@ -1383,3 +1383,55 @@
   z-index: 2;
   font-size: 20px;
 }
+.mobile-offcanvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  z-index: 5;
+  border: solid 1px;
+  text-align: center;
+  padding: 32px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.close-mobile-offcanvas {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 20px;
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 50%;
+  color: #d6d8e7;
+  height: 40px;
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.show-mobile-offcanvas {
+  position: absolute;
+  bottom: 100px;
+  left: 20px;
+  font-size: 20px;
+  z-index: 3;
+  border: none;
+  border-radius: 40px;
+  padding: 5px 10px;
+  border: 2px solid #d6d8e7;
+  box-sizing: border-box;
+  border-radius: 40px;
+  color: #ef476f;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 28px;
+  letter-spacing: 0.75px;
+  text-align: center;
+  background-color: #fff;
+}
