--- a/src/components/includes/SmartPhoneContent/css/style.css
+++ b/src/components/includes/SmartPhoneContent/css/style.css
@@ -1,49 +1,8 @@
-/* The device with borders */
-.smartphone {
+#phone-content {
   position: relative;
-  width: 270px;
-  height: 535px;
-  margin: auto;
-  border: 10px #14142b solid;
-  border-top-width: 10px;
-  border-bottom-width: 10px;
-  border-radius: 48px;
-  overflow: hidden;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+  height: 100%;
 }
-
-/* The horizontal line on the top of the device */
-/* .smartphone:before {
-    content: '';
-    display: block;
-    width: 60px;
-    height: 5px;
-    position: absolute;
-    top: -30px;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: #333;
-    border-radius: 10px;
-  } */
-
-/* The circle on the bottom of the device */
-/* .smartphone:after {
-    content: '';
-    display: block;
-    width: 35px;
-    height: 35px;
-    position: absolute;
-    left: 50%;
-    bottom: -65px;
-    transform: translate(-50%, -50%);
-    background: #333;
-    border-radius: 50%;
-  } */
-
-/* The screen (or content) of the device */
-.smartphone .content {
+#phone-content .content {
   width: 100%;
   height: 90%;
   /* background: white; */
@@ -52,7 +11,7 @@
   text-align: center;
   position: relative;
 }
-.smartphone .red {
+#phone-content .red {
   background-color: transparent;
   width: 100%;
   min-height: 10%;
@@ -63,16 +22,16 @@
   align-items: center;
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
-.smartphone .content::-webkit-scrollbar {
+#phone-content .content::-webkit-scrollbar {
   display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
-.smartphone .content {
+#phone-content .content {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
-.profile-pic {
+#phone-content .profile-pic {
   height: 73.71px;
   width: 73.71px;
   border-radius: 50%;
@@ -84,7 +43,7 @@
   align-items: center;
   border: none;
 }
-.profile-pic-sub {
+#phone-content .profile-pic-sub {
   height: 73.71px;
   width: 73.71px;
   border-radius: 50%;
@@ -97,14 +56,14 @@
   font-size: 30px;
   color: white;
 }
-.icon {
+#phone-content .icon {
   margin: 0 8px;
   font-size: 15px;
   cursor: pointer;
   border-radius: 4px;
   overflow: hidden;
 }
-.monaly-logo {
+#phone-content .monaly-logo {
   cursor: pointer;
   /* position: sticky; 
   bottom: 0;
@@ -114,7 +73,7 @@
   width: 100px; */
   margin-bottom: 32px;
 }
-.fixed-logo-box {
+#phone-content .fixed-logo-box {
   position: sticky;
   bottom: 0;
   left: 0;
@@ -122,12 +81,12 @@
   width: 100%;
   background-color: red;
 }
-.custom-link-btn:active {
+#phone-content .custom-link-btn:active {
   transform: scale(1.002);
 }
-.custom-link-btn {
+#phone-content .custom-link-btn {
   width: 100%;
-  height: 45px;
+  height: 48px;
   /* Monaly primary */
 
   box-sizing: border-box;
@@ -147,7 +106,7 @@
   align-items: center;
   position: relative;
 }
-.custom-link-btn .image {
+#phone-content .custom-link-btn .image {
   width: 35px;
   height: 80%;
   background-color: transparent;
@@ -158,7 +117,7 @@
   border-radius: 4px;
   overflow: hidden;
 }
-.custom-link-btn span {
+#phone-content .custom-link-btn span {
   width: 60%;
   height: 100%;
   display: flex;
@@ -166,10 +125,10 @@
   align-items: center;
   background-color: transparent;
 }
-.custom-link-btn-with-img:active {
+#phone-content .custom-link-btn-with-img:active {
   transform: scale(1.002);
 }
-.custom-link-btn-with-img {
+#phone-content .custom-link-btn-with-img {
   width: 100%;
   height: 45px;
   /* Monaly primary */
@@ -192,7 +151,7 @@
   position: relative;
   padding: 8px;
 }
-.add-links-to-start {
+#phone-content .add-links-to-start {
   box-shadow: 0px 8px 16px rgba(17, 17, 17, 0.04);
   width: 100%;
   height: 100px;
