--- a/src/components/screens/DashBoard/css/style.css
+++ b/src/components/screens/DashBoard/css/style.css
@@ -1391,9 +1391,7 @@
   height: 100%;
   background-color: #ffffff;
   z-index: 5;
-  border: solid 1px;
   text-align: center;
-  padding: 32px;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1412,6 +1410,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 2;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
 }
 .show-mobile-offcanvas {
   position: absolute;
@@ -1434,4 +1434,10 @@
   letter-spacing: 0.75px;
   text-align: center;
   background-color: #fff;
+  display: none;
+}
+@media screen and (max-width: 900px) {
+  .show-mobile-offcanvas {
+    display: block;
+  }
 }
