--- a/src/components/includes/Analytics/css/style.css
+++ b/src/components/includes/Analytics/css/style.css
@@ -29,3 +29,10 @@
   /* border: none !important; */
   background: #eff0f7;
 }
+.no-visitors-details {
+  min-height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
