--- a/src/components/includes/Notifications/css/style.css
+++ b/src/components/includes/Notifications/css/style.css
@@ -65,6 +65,11 @@
 
   color: #4e4b66;
 }
+#notifications .no-notifications {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
 @media screen and (max-width: 900px) {
   #notifications .notification-item-image {
     flex: 1 0 100%;
