--- a/src/components/includes/SmartPhoneContent/css/style.css
+++ b/src/components/includes/SmartPhoneContent/css/style.css
@@ -152,7 +152,7 @@
   padding: 8px;
 }
 #phone-content .add-links-to-start {
-  box-shadow: 0px 8px 16px rgba(17, 17, 17, 0.04);
+  box-shadow: 0px 0px 20px rgba(17, 17, 17, 0.04);
   width: 100%;
   height: 100px;
   background-color: rgba(255, 255, 255, 0.096);
@@ -161,4 +161,5 @@
   padding: 10px;
   border-radius: 8px;
   margin-top: 50px;
+  justify-content: center;
 }
