--- a/src/components/screens/HomePage/css/style.css
+++ b/src/components/screens/HomePage/css/style.css
@@ -1,3 +1,28 @@
+@keyframes moveInLeft {
+  0% {
+    opacity: 1;
+    transform: translateX(-1rem);
+  }
+  50% {
+    transform: translateX(0);
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+    transform: translate(1rem);
+  }
+}
+@keyframes float {
+  0% {
+    transform: translatey(0px);
+  }
+  50% {
+    transform: translatey(-20px);
+  }
+  100% {
+    transform: translatey(0px);
+  }
+}
 #homepage a:active {
   color: currentColor;
   text-decoration: none;
@@ -103,6 +128,87 @@
   font-weight: 400;
 
   color: #ffffff;
+}
+.homepage-moving-images {
+  width: 100%;
+  height: 500px;
+  /* background-color: #ddd; */
+  background-image: url("../../../../assets/images/StripeBG.svg");
+  background-position: bottom;
+  background-size: 50%;
+  position: relative;
+}
+.SectionOne1 {
+  position: absolute;
+  height: 40%;
+  left: 0%;
+  top: 2rem;
+  z-index: 2;
+  animation: float 6s ease-in-out infinite;
+}
+.SectionOne2 {
+  position: absolute;
+  height: 40%;
+  left: 0%;
+  bottom: 10%;
+  z-index: 2;
+  animation: float 6s ease-in-out infinite;
+}
+.SectionOne3 {
+  position: absolute;
+  height: 12%;
+  left: 15%;
+  bottom: 40%;
+  z-index: 2;
+  animation: float 6s ease-in-out infinite;
+  animation-delay: 5s;
+}
+.SectionOne4 {
+  position: absolute;
+  height: 100%;
+  left: 50%;
+  top: 50%;
+  transform: translate(-40%, -50%);
+}
+.SectionOne5 {
+  position: absolute;
+  height: 50%;
+  right: 0%;
+  top: -2rem;
+  animation: float 6s ease-in-out infinite;
+  animation-delay: 5s;
+}
+
+@media screen and (max-width: 1200px) {
+  .homepage-moving-images {
+    height: 400px;
+    background-image: url("../../../../assets/images/StripeBG.svg");
+    background-position: bottom;
+    background-size: 50%;
+  }
+  .SectionOne1 {
+    height: 30%;
+    top: 0rem;
+  }
+  .SectionOne2 {
+    position: absolute;
+    height: 40%;
+    left: 0%;
+  }
+  .SectionOne3 {
+    height: 12%;
+    left: 10%;
+    bottom: 45%;
+  }
+  .SectionOne4 {
+    height: 90%;
+  }
+  .SectionOne5 {
+    position: absolute;
+    height: 50%;
+    right: -5%;
+    top: -1rem;
+  }
 }
 @media screen and (max-width: 900px) {
   .e-ad-card {
